add samples to the treatment endpoint result set (#11628)